--- a/src/main/resources/templates/admin/employee/monthlyScore.html
+++ b/src/main/resources/templates/admin/employee/monthlyScore.html
@@ -54,6 +54,27 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col-12 grid-margin">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title">选择时间</h4>
+                                <form class="form-sample" method="GET" action="/admin/employees/monthlyScore" onsubmit="return filter()">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group row">
+                                                <div class="col-sm-9">
+                                                    <input type="month" name="date" class="form-control" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <input  class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  type="submit" value="查询" style="width:150px; height:50px;float: right;"></input>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col-md-12 stretch-card">
