--- a/src/main/resources/templates/employee/wrapper.html
+++ b/src/main/resources/templates/employee/wrapper.html
@@ -172,6 +172,12 @@
                 <span class="menu-title">提交记录</span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/logout}">
+                <i class="mdi mdi-view-headline menu-icon"></i>
+                <span class="menu-title">退出登录</span>
+            </a>
+        </li>
 
     </ul>
 </nav>
