--- a/src/main/resources/templates/admin/task/tasks.html
+++ b/src/main/resources/templates/admin/task/tasks.html
@@ -66,7 +66,7 @@
                           <tr th:each="task:${tasks}">
                             <td th:text="${task.id}"></td>
                             <td>
-                              <a  th:href="@{/admin/task/{id}(id=${task.id})}" />
+                              <a  th:href="@{/admin/task/{id}(id=${task.id})}" th:text="${task.subject}"></a>
                             </td>
                             <td th:text="${#dates.format(task.createdAt, 'yyyy-MM-dd')}"></td>
                             <td th:text="${#dates.format(task.deadline, 'yyyy-MM-dd')}"></td>
@@ -119,7 +119,6 @@
       #login_click{ margin-top:32px; height:40px; width: 100px}
       #login_click a
       {
-
 
         text-decoration:none;
         background:#2f435e;
