--- a/src/main/resources/templates/admin/employee/monthlyScore.html
+++ b/src/main/resources/templates/admin/employee/monthlyScore.html
@@ -80,7 +80,7 @@
                     <div class="col-md-12 stretch-card">
                         <div class="card">
                             <div class="card-body">
-                                <p class="card-title">员工分数统计（按月）</p>
+                                <p class="card-title" th:text="'员工分数统计 '+${year}+'年'+${month}+'月'"></p>
                                 <div class="table-responsive">
                                     <table id="recent-purchases-listing" class="table">
                                         <thead>
