--- a/src/main/resources/templates/employee/task/details.html
+++ b/src/main/resources/templates/employee/task/details.html
@@ -62,18 +62,18 @@
                                         </tr>
                                         <tr>
                                             <th>状态</th>
-                                            <td th:text="${task.state}"></td>
+                                            <td th:text="${task.state}==0?'未完成':'已完成'"></td>
                                         </tr>
-                                        <tr th:if="${task.state}=='已完成'">
+                                        <tr th:if="${task.state}==1">
                                             <th>完成时间</th>
                                             <td th:text="${#dates.format(task.finishedAt, 'yyyy-MM-dd')}"></td>
                                         </tr>
                                         <tr>
                                             <th>操作</th>
-                                            <td th:if="${task.state}=='未完成'">
+                                            <td th:if="${task.state}==0">
                                                 <a th:href="@{/employee/task/{id}/commit(id=${task.id})}">提交</a>
                                             </td>
-                                            <td th:if="${task.state}=='已完成'">
+                                            <td th:if="${task.state}==1">
                                                 <a th:href="@{/employee/commit/{commitId}/download(taskId=${task.id},commitId=${commitDownloadId})}">
                                                     下载commit
                                                 </a>
