--- a/src/main/resources/templates/admin/task/tasks.html
+++ b/src/main/resources/templates/admin/task/tasks.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home</title>
+    <title>Dispatcher 任务列表</title>
     <!-- plugins:css -->
     <link rel="stylesheet" th:href="@{/vendors/mdi/css/materialdesignicons.min.css}">
     <link rel="stylesheet" th:href="@{/vendors/base/vendor.bundle.base.css}">
@@ -75,6 +75,7 @@
 
                             <td id="login_click">
                               <a th:id="${task.id}+'_button'" th:if="${task.state}==0" th:onclick="submit_set([[${task.id}]]);">完成</a>
+                              <a th:if="${task.filePath!=null&amp;&amp;task.filePath!=''}" th:href="@{/admin/task/{taskId}/download(taskId=${task.id})}">下载文件</a>
                             </td>
                           </tr>
                         </tbody>
