--- a/src/main/resources/templates/employee/task/tasks.html
+++ b/src/main/resources/templates/employee/task/tasks.html
@@ -72,7 +72,7 @@
                             <td th:id="${task.id}" th:text="${task.state}==0?'未完成':'已完成'"></td>
                             <td>
                               <a th:if="${task.state}==0" th:href="@{/employee/task/{id}/commit(id=${task.id})}">提交</a>
-                              <a th:if="${task.state}==1" th:href="@{/employee/task/{taskId}/download(taskId=${task.id})}">下载commit</a>
+                              <a th:if="${task.filePath!=null&amp;&amp;task.filePath!=''}" th:href="@{/admin/task/{taskId}/download(taskId=${task.id})}">下载文件</a>
                             </td>
                           </tr>
                         </tbody>
